# AIDE

./: .gitignore  CLAUDE.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  start.sh  stop.sh
backend/: config.py  main.py  protocols.py  types.py
backend/agents/: __init__.py  base.py  critic.py  director.py  librarian.py  scientist.py  subagent.py  synthesizer.py  write_back_guard.py  writer.py
backend/api/: checkpoints.py  papers.py  projects.py  settings.py  ws.py
backend/benchmarks/: __init__.py  runner.py  scorer.py
backend/blackboard/: __init__.py  actions.py  active_tracker.py  board.py  challenge.py  compressor.py  context_builder.py  event_bus.py  levels.py  relation_extractor.py  retriever.py  semantic_board.py
backend/checkpoint/: __init__.py  events.py  manager.py
backend/evaluation/: __init__.py  claims.py  convergence.py  dimensions.py  evaluator.py  metrics.py  store.py
backend/knowledge/: __init__.py  bm25_store.py  citation_graph.py  embeddings.py  hybrid_search.py  pdf_processor.py  trend_extractor.py  vector_store.py  web_retriever.py
backend/llm/: __init__.py  models.py  router.py  tracker.py
backend/memory/: __init__.py  context_builder.py  token_budget.py  write_back_guard.py
backend/migrations/: env.py
backend/models/: __init__.py  artifact.py  (+10 more)
doc/: Phase 1.md  Phase 2.md  Phase 3.md  Phase 4.md  WIP.md  aide2.plan.md  architecture-v1.md  architecture.md  build.md  devrec.md  price_design.md  q.md  report1.md  review.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
(+95 files in other folders)
