[project]
name = "aide"
version = "0.1.0"
description = "AI for Discovery & Exploration -- multi-agent research assistant"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "chromadb>=0.6",
    "rank-bm25>=0.2",
    "networkx>=3.4",
    "pymupdf>=1.25",
    "pdfplumber>=0.11",
    "openai>=1.60",
    "httpx>=0.28",
    "jinja2>=3.1",
    "python-multipart>=0.0.18",
    "aiofiles>=24.1",
    "tiktoken>=0.8",
    "websockets>=14.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
